# robocar_aux

./: CMakeLists.txt  README.md  pico_serial.py
include/: actuation.h  brain_interface.h  core1_main.h  core_comm_queue.h  freertos_hooks.h  math_utils.h  mpu6050.h  mpu6050_utils.h  task_names.h  type_utils.h  vec.h  vec3.h  vehicle_control.h  velocity_handler.h
pio/: wheel_rev.pio
scripts/: bit_converter.py  pico_serial.py
src/: CMakeLists.txt  FreeRTOSConfig.h  actuation.c  brain_interface.c  core1_main.c  main.c  math_utils.c  mpu6050.c  mpu6050_utils.c  vec.c  vec3.c  vehicle_control.c  velocity_handler.c
